# SteamController2GyroDSU-Win

./: .gitignore  99-sc2gyrodsu.rules  CMakeLists.txt  LICENSE  README.md  SteamControllerGyroDSU.desktop  install.sh  mingw-toolchain.cmake  sc2gyrodsu.service  uninstall-steamcontrollergyrodsu.desktop  uninstall.sh  update.sh
.github/workflows/: main.yml
assets/: sc2gyrodsu.qrc
controllerProfiles/: controller0.xml
desktop/: sc2gyrodsu-config.desktop.in  sc2gyrodsu-uninstall.desktop.in  sc2gyrodsu-update.desktop.in
inc/: dsu.h  hiddev.h  platform.h  triton.h
pkg/: install.sh
scripts/: resize_icon.py
src/: cemuhook.cpp  config.cpp  config.h  dsu.cpp  hiddev.cpp  main.cpp  triton.cpp
src/gui/: axis_wizard.cpp  axis_wizard.h  calibworker.cpp  calibworker.h  configapp.cpp  controller_view.cpp  controller_view.h  dsu_client.cpp  dsu_client.h  mainwindow.cpp  mainwindow.h  test_tab.cpp  test_tab.h
